# dj-readysetgo

./: .pre-commit-config.yaml  .pyup.yaml  README.md  cookiecutter.json  pyproject.toml  tox.ini
.github/: dependabot.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  README.md  manage.py  pyproject.toml
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
{{ cookiecutter.project_slug }}/config/settings/: base.py  local.py  production.py  test.py
{{ cookiecutter.project_slug }}/locale/en_US/LC_MESSAGES/: django.po
{{ cookiecutter.project_slug }}/locale/fr_FR/LC_MESSAGES/: django.po
{{ cookiecutter.project_slug }}/locale/pt_BR/LC_MESSAGES/: django.po
{{ cookiecutter.project_slug }}/requirements/: base.txt  local.txt  production.txt
{{ cookiecutter.project_slug }}/theme/static/js/: theme.js
{{ cookiecutter.project_slug }}/theme/static_src/: package-lock.json  package.json
{{ cookiecutter.project_slug }}/theme/static_src/src/: styles.css
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/: base.html  robots.txt
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  verification_sent.html  verified_email_required.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/components/: footer.html  nav.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/includes/: meta.html  scripts.html  stylesheets.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/layouts/: base_layout.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/pages/: home.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/templates/socialaccount/: authentication_error.html  login_cancelled.html
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/users/: adapters.py  admin.py  context_processors.py  forms.py  models.py  utils.py
(+11 files in other folders)
